[project]
name = "llm-tools-web-fetch"
version = "0.1.0"
description = "Web content extraction tool for LLM using Trafilatura"
readme = "README.md"
authors = [{name = "c0ffee0wl"}]
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
    "llm",
    "trafilatura>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/c0ffee0wl/llm-linux-setup"

[project.entry-points.llm]
fetch_url = "llm_tools_web_fetch"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
